finishing up edits 5/1

--- a/Appendices/Genderdifferences.tex
+++ b/Appendices/Genderdifferences.tex
@@ -1,6 +1,7 @@
-\section{}
+\section{Gender Differences}
+\label{appendix:genderdifferences}
 
-In the Appendix, we summarize (Table~\ref{tab:litreview-table}) work that examines early-life differences between boys and girls. It is generally found that boys are more fragile than girls early in life. While some of these papers consider the family environment, there is a dearth of work studying (1) the effect of low-quality preschool on children\footnote{Although \citet{Kottelenberg-Lehrer_2014_Gender-Effects} study gender gaps, they only consider intact families.} and (2) the interaction of this with family environments. We find that while low-quality programs can deteriorate the parent-child interaction, especially for boys, high-quality programs can enhance it.
+We summarize (Table~\ref{tab:litreview-table}) work that examines early-life differences between boys and girls. It is generally found that boys are more fragile than girls early in life. While some of these papers consider the family environment, there is a dearth of work studying (1) the effect of low-quality preschool on children\footnote{Although \citet{Kottelenberg-Lehrer_2014_Gender-Effects} study gender gaps, they only consider intact families.} and (2) the interaction of this with family environments. We find that while low-quality programs can deteriorate the parent-child interaction, especially for boys, high-quality programs can enhance it.
 
 \begin{sidewaystable}[H]
 \centering
@@ -16,3 +17,167 @@ In the Appendix, we summarize (Table~\ref{tab:litreview-table}) work that examin
 \end{threeparttable}
 \end{adjustbox}
 \end{sidewaystable} 
+
+\subsection{Gender Differences in Treatment Effects}
+\label{appendix:gdiff-tes}
+The following tables report the gender differences between the control means and the treatment effects.
+
+\begin{table}[!htbp]
+\centering
+\begin{threeparttable}
+\caption{Gender Differences of Treatment Effects, IQ}
+\begin{scriptsize}
+\input{output/abccare-gdiff-treatmenteffects-iq}
+\end{scriptsize}
+\begin{tablenotes}
+\scriptsize
+Note: This table reproduces the control-group means and estimated treatment effects reported in (1) in Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales}. The difference columns show the difference between the control mean and treatment effect of males and females. The $p$-value corresponding to each difference is from a sign rank test that compares the empirical distributions over 100 bootstrapped resamples.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+\begin{table}[!htbp]
+\centering
+\begin{threeparttable}
+\caption{Gender Differences of Treatment Effects, Achievement}
+\begin{scriptsize}
+\input{output/abccare-gdiff-treatmenteffects-ach}
+\end{scriptsize}
+\begin{tablenotes}
+\scriptsize
+Note: This table reproduces the control-group means and estimated treatment effects reported in (1) in Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales}. The difference columns show the difference between the control mean and treatment effect of males and females. The $p$-value corresponding to each difference is from a sign rank test that compares the empirical distributions over 100 bootstrapped resamples.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+\begin{table}[!htbp]
+\centering
+\begin{threeparttable}
+\caption{Gender Differences of Treatment Effects, Social-emotional}
+\begin{scriptsize}
+\input{output/abccare-gdiff-treatmenteffects-se}
+\end{scriptsize}
+\begin{tablenotes}
+\scriptsize
+Note: This table reproduces the control-group means and estimated treatment effects reported in (1) in Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales}. The difference columns show the difference between the control mean and treatment effect of males and females. The $p$-value corresponding to each difference is from a sign rank test that compares the empirical distributions over 100 bootstrapped resamples.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+
+\begin{table}[!htbp]
+\centering
+\begin{threeparttable}
+\caption{Gender Differences of Treatment Effects, Parenting}
+\begin{scriptsize}
+\input{output/abccare-gdiff-treatmenteffects-parenting}
+\end{scriptsize}
+\begin{tablenotes}
+\scriptsize
+Note: This table reproduces the control-group means and estimated treatment effects reported in (1) in Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales}. The difference columns show the difference between the control mean and treatment effect of males and females. The $p$-value corresponding to each difference is from a sign rank test that compares the empirical distributions over 100 bootstrapped resamples.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+
+\begin{table}[!htbp]
+\centering
+\begin{threeparttable}
+\caption{Gender Differences of Treatment Effects, Parental Income}
+\begin{scriptsize}
+\input{output/abccare-gdiff-treatmenteffects-mlabor}
+\end{scriptsize}
+\begin{tablenotes}
+\scriptsize
+Note: This table reproduces the control-group means and estimated treatment effects reported in (1) in Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales}. The difference columns show the difference between the control mean and treatment effect of males and females. The $p$-value corresponding to each difference is from a sign rank test that compares the empirical distributions over 100 bootstrapped resamples.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+
+\begin{table}[!htbp]
+\centering
+\begin{threeparttable}
+\caption{Gender Differences of Treatment Effects, Education}
+\begin{scriptsize}
+\input{output/abccare-gdiff-treatmenteffects-education}
+\end{scriptsize}
+\begin{tablenotes}
+\scriptsize
+Note: This table reproduces the control-group means and estimated treatment effects reported in (1) in Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales}. The difference columns show the difference between the control mean and treatment effect of males and females. The $p$-value corresponding to each difference is from a sign rank test that compares the empirical distributions over 100 bootstrapped resamples.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+
+\begin{table}[!htbp]
+\centering
+\begin{threeparttable}
+\caption{Gender Differences of Treatment Effects, Employment}
+\begin{scriptsize}
+\input{output/abccare-gdiff-treatmenteffects-employment}
+\end{scriptsize}
+\begin{tablenotes}
+\scriptsize
+Note: This table reproduces the control-group means and estimated treatment effects reported in (1) in Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales}. The difference columns show the difference between the control mean and treatment effect of males and females. The $p$-value corresponding to each difference is from a sign rank test that compares the empirical distributions over 100 bootstrapped resamples.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+
+\begin{table}[!htbp]
+\centering
+\begin{threeparttable}
+\caption{Gender Differences of Treatment Effects, Crime}
+\begin{scriptsize}
+\input{output/abccare-gdiff-treatmenteffects-crime}
+\end{scriptsize}
+\begin{tablenotes}
+\scriptsize
+Note: This table reproduces the control-group means and estimated treatment effects reported in (1) in Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales}. The difference columns show the difference between the control mean and treatment effect of males and females. The $p$-value corresponding to each difference is from a sign rank test that compares the empirical distributions over 100 bootstrapped resamples.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+
+\begin{table}[!htbp]
+\centering
+\begin{threeparttable}
+\caption{Gender Differences of Treatment Effects, Risky Behavior}
+\begin{scriptsize}
+\input{output/abccare-gdiff-treatmenteffects-risk}
+\end{scriptsize}
+\begin{tablenotes}
+\scriptsize
+Note: This table reproduces the control-group means and estimated treatment effects reported in (1) in Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales}. The difference columns show the difference between the control mean and treatment effect of males and females. The $p$-value corresponding to each difference is from a sign rank test that compares the empirical distributions over 100 bootstrapped resamples.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+\begin{table}[!htbp]
+\centering
+\begin{threeparttable}
+\caption{Gender Differences of Treatment Effects, Health}
+\begin{scriptsize}
+\input{output/abccare-gdiff-treatmenteffects-health}
+\end{scriptsize}
+\begin{tablenotes}
+\scriptsize
+Note: This table reproduces the control-group means and estimated treatment effects reported in (1) in Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales}. The difference columns show the difference between the control mean and treatment effect of males and females. The $p$-value corresponding to each difference is from a sign rank test that compares the empirical distributions over 100 bootstrapped resamples.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+\begin{table}[!htbp]
+\centering
+\begin{threeparttable}
+\caption{Gender Differences of Treatment Effects, Mental Health}
+\begin{scriptsize}
+\input{output/abccare-gdiff-treatmenteffects-mentalhealth}
+\end{scriptsize}
+\begin{tablenotes}
+\scriptsize
+Note: This table reproduces the control-group means and estimated treatment effects reported in (1) in Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales}. The difference columns show the difference between the control mean and treatment effect of males and females. The $p$-value corresponding to each difference is from a sign rank test that compares the empirical distributions over 100 bootstrapped resamples.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
