--- a/output/abccare-gendergaps-summarizingtable.tex
+++ b/output/abccare-gendergaps-summarizingtable.tex
@@ -4,16 +4,19 @@
 Category & Control Group  &  Control Group &  Control Group &  Treatment \\
 	&				&	Stay at Home		& Alternative Preschool &  Group \\
 \midrule  
-IQ 								& \checkmark &  \checkmark* & $\times$&\checkmark \\
-Achievement						& \checkmark &  \checkmark* &$\times$ & $\times$* \\
-Parenting							& \checkmark&  \checkmark* &$\times$ & \checkmark \\
-Social-emotional					& $\times$&$=$ &$\times$* &$\times$* \\
-Education							& \checkmark&\checkmark & $=$ &$\times$* \\
-Employment						&  \checkmark* &  \checkmark* &  \checkmark* &$\times$* \\
-Parental income					&  \checkmark* &\checkmark & \checkmark & $\times$\\
-Health 							& \checkmark &$\times$ &\checkmark &  \checkmark* \\
-Crime							&  \checkmark* &  $=$ & \checkmark* &  \checkmark* \\
+IQ 								& \checkmark 	&  \checkmark* 		& $\times$	& \checkmark \\
+Achievement						& \checkmark* 	&  \checkmark* 		&$\times$		& $\times$* \\
+Social-emotional					& $\times$	& \checkmark 		&$\times$* 	&$\times$ \\
+Parenting							& \checkmark	&  \checkmark* 		&$\times$ 	& $\times$ \\
+Parental income					&  \checkmark  &\checkmark* 		& $\times$  	& \checkmark \\
+Education							& \checkmark 	&\checkmark 		& $\times$ 	&	$\times$* \\
+Employment						&  \checkmark* &  \checkmark* 		& $=$ 		&\checkmark* \\
+Crime							&  $\times$* 	&  $=$ 			& $\times$* 	&  $\times$* \\
+Risky Behavior						& $\times$	& $\times$*		& \checkmark	& $\times$* \\
+Health 							& $=$ 		& $\times$ 		& $\times$ 	&  \checkmark *\\
+Mental Health						& \checkmark* & \checkmark* 		&	\checkmark &	\checkmark \\
+
 \midrule
-All								&  \checkmark* &\checkmark*&  $\times$ & $\times$\\
+All								&  \checkmark &\checkmark*&  $\times$ & $\times$\\
 \bottomrule
 \end{tabular}
