edits from Heckman 5/2

--- a/Appendices/Methodology_treatmenteffects.tex
+++ b/Appendices/Methodology_treatmenteffects.tex
@@ -104,7 +104,7 @@ and
 
 \begin{enumerate}
 
-\item Resample the experimental sample with replacement at the individual level. This gives us a new (re-samples)panel dataset. Information on the whole story about each individual is obtained in each re-sample.
+\item Resample the experimental sample with replacement at the individual level. This gives us a new (re-sampled) panel dataset. Full information about each individual is obtained in each re-sample.
 
 \item For a partially complete outcome $Y_{j}$, run $K$ regressions of $Y_{j}$ on the set of explanatory variables $k = 1,..., K$.\footnote{We perform this procedure at any age, and re-sample individuals independently of their treatment status so we drop the respective indices.} $K$ is determined by the number of possible control sets we can construct with 1, 2 and, 3 baseline variables. We document this procedure and describe the possible control sets in Appendix~\ref{appendix:bvariables}.
 
@@ -127,3 +127,10 @@ and
 \item If counting the number of positive and at significant treatment effects, compute the number of positive and significant treatment effects (at the desired significance level). Re-sample the non-experimental sample a second time. The second re-sample creates an empirical bootstrap distribution for this count. Generate standard errors and $p$-value's as before.
 \end{enumerate}
 
+\subsubsection{Gender Differences}
+
+\begin{enumerate}
+\item Resample the experimental sample with replacement at the individual level. This gives us a new (re-sampled) panel dataset. Full information about each individual is obtained in each re-sample.
+
+\item 
+\end{enumerate}
