--- a/sections/6_conclusion.tex
+++ b/sections/6_conclusion.tex
@@ -1,4 +1,6 @@
-This paper examines differences in gender impacts of treatment of early childhood programs targeted to disadvantaged children. We show that there are gender gaps before treatment that are then changed by treatment. We find that control-group males tend to do better than the control-group females, especially in education and employment outcomes. After treatment, most these gaps are narrowed or reversed. This corresponds with the finding that a larger proportion of the treatment effects are positive and significant for females than for males. ABC/CARE, in addition to improving select individual outcomes, also narrowed the male-female gap in important categories of outcomes.
+This paper examines differences in gender impacts of treatment of early childhood programs targeted to disadvantaged children. We show that there are gender gaps favoring males before treatment that are altered by treatment. Control-group males tend to do better than the control-group females, especially in education and employment outcomes. After treatment, most gaps are narrowed or reversed. This corresponds with the finding that a larger proportion of the treatment effects are positive and significant for females than for males. ABC/CARE, in addition to improving select individual outcomes, also narrowed the male-female gap in important categories of outcomes.
 
-We find that lower quality preschools are especially detrimental for boys. This helps explain an apparent contradiction in the literature (\citet{Baker_Gruber_etal_2008_JPE,Baker_Gruber_Milligan_2015_Noncog_Defects,Kottelenberg-Lehrer_2014_Gender-Effects}) that childcare can harm children. How quality childcare harms boys but girls are more robust. This evidence is consistent with previous work that finds boys to be more vulnerable early in life than girls \citep{golding2016psychology}. Boys similarly are more harmed by unfavorable home environments (measured by father present and maternal locus of control) than girls. \textbf{[JJH: How does treatment offset harm? How much of the gap does treatment offset? We lack a punch line -- please do requested accounting exercise!][We clarified the accounting exercise in the introduction. We can say that over all outcomes, ABC/CARE reduces the male-female gender gap by 16.7 percentage points (see the last row of Table 1).]}
+Lower quality preschools are especially detrimental for boys. This finding helps explain an apparent contradiction in the literature (\citet{Baker_Gruber_etal_2008_JPE,Baker_Gruber_Milligan_2015_Noncog_Defects,Kottelenberg-Lehrer_2014_Gender-Effects}) that childcare can harm children. Low quality childcare harms boys but girls are more robust. This evidence is consistent with previous work that finds boys to be more vulnerable early in life than girls \citep{golding2016psychology}. Boys similarly are more harmed by unfavorable home environments (measured by father present and maternal locus of control) than girls.
+
+Our analysis sounds a cautionary note about the value of childcare programs. In the past decade, politicians and pundits have embraced early childhood programs as solutions for alleviating inequality. Little attention has been paid to quality. This study shows that low quality early childhood programs can have deleterious effects on child development, especially for boys.
 
