--- a/sections/5_gender-differences.tex
+++ b/sections/5_gender-differences.tex
@@ -1,22 +1,23 @@
-This section discusses the factors producing gender differences. A major determinant is the choice of the alternative child care arrangements.
-Estimated treatment effects are very similar across genders comparing treatment to staying at home full time. Males benefit much more from treatment relative to alternative preschools compared to their benefits from treatment relative to staying at home. This result is consistent with previous research that shows (i) substantial gender differences resulting from attending low quality childcare \citep{Kottelenberg-Lehrer_2014_Gender-Effects,Baker_Gruber_Milligan_2015_Noncog_Defects}; and (ii) that females are less sensitive to uncertain environments (see, e.g., \citealp{golding2016psychology,Autor-etal_2015_Family-Disadvantage}).
+This section discusses the factors generating gender differences. A major determinant is the choice of the alternative child care arrangements.
+Estimated treatment effects are very similar across genders comparing treatment to staying at home full time. Males benefit much more from treatment relative to low quality childcare compared to their benefits from treatment relative to staying at home. This result is consistent with previous research that shows (i) substantial gender differences resulting from attending low quality childcare \citep{Kottelenberg-Lehrer_2014_Gender-Effects,Baker_Gruber_Milligan_2015_Noncog_Defects}; and (ii) that females are less sensitive to more stressful, low quality environments (see, e.g., \citealp{golding2016psychology,Autor-etal_2015_Family-Disadvantage}).
 
-In Table~\ref{tab:proportion-table-ranksign}, we show that in the proportion of outcomes, by outcome category, for which the males exceed the females. Here, we further divide the control group by the alternative setting and both the treatment and control groups by father present, a potentially important moderator. Figure~\ref{fig:proportion-altpre} shows the proportions partitioned by alternative setting. The males who stay at home do better than the females in cognitive and parenting measures, employment, and across all outcomes. Unlike the males who attend lower quality alternative preschool, the males who stay at home have similar crime outcomes as the females. Given the prominence of the male criminal activity, this finding highlights the magnitude of harm caused by low-quality alternative preschools for the males. \textbf{[JJH: We find no gender difference in crime effects -- surely this is wrong.][With the rank sign test, this is no longer the case.]}
+Table~\ref{tab:proportion-table-ranksign} shows the proportion of outcomes, by outcome category, for which the males exceed the females. Here, we further divide the control group into the alternatives used and both the treatment and control groups by father present, a potentially important moderator. Recall, we condition on baseline variables to control for selection into childcare for controls.\footnote{See Appendix~\ref{} for a sensitivity study using other methods. They produce the same estimates, but are less precisely estimated.} Figure~\ref{fig:proportion-altpre} shows the proportions partitioned by alternative childcare setting. The males who stay at home do better than the females in cognitive and parenting measures, employment, and across all outcomes. Unlike the males who attend lower quality alternative childcare, the males who stay at home have similar crime outcomes as the females. Given the important negative effects of male criminal activity, this finding highlights the magnitude of harm caused by low-quality alternative preschools for the males. 
 
 \begin{figure}[H]
 \centering
-\caption{Proportion of Outcomes Males $>$ Females, by Outcome Category, Dividing by Alternative Setting}
+\caption{Proportion of Outcomes Males $>$ Females, by Outcome Category, Partitioning by Alternative Childcare Setting}
 \label{fig:proportion-altpre}
 	\includegraphics[width=\textwidth]{output/gendergaps-control-moderated-altpre}
 \footnotesize \justify
 Note: These plots show the proportion of outcomes, by outcome category, for which the males' mean is larger than the females' mean. The standard errors and the $p$-values are computed using 100 bootstraps. The $p$-values are one-sided and test the null hypothesis that the proportion of outcomes is greater than $\frac{1}{2}$ The crime outcomes are all coded so that a higher value indicates more criminal activity. All other outcome categories have higher values corresponding to socially desirable outcomes.
 \end{figure}
 
-Next, we report these proportions by father present (Figure~\ref{fig:proportion-fhome}). Father's presence interacted with treatment favors males for IQ, parenting, and health measures. Males in the control group do better when the father is absent in education and employment. This suggests that treatment complements the home environment for males more than for females.
+In Appendix~\ref{}, we report estimates by whether or not the father is present (Figure~\ref{fig:proportion-fhome}). Few clear-cut patterns emerge. Father's presence interacted with treatment favors males for IQ, parenting, and health measures. Males in the control group do better when the father is absent in education and employment. This suggests that treatment complements the home environment for males more than for females.
 
 \begin{figure}[!htbp]
+\textbf{[JJH: Move to appendix.]}
 \centering
-\caption{Proportion of Outcomes Males $>$ Females, by Outcome Category, Dividing by Father Present}
+\caption{Proportion of Outcomes Males $>$ Females, by Outcome Category, Partitioning by Whether or Not the Father is Present}
 \label{fig:proportion-fhome}
 \begin{subfigure}[h]{0.7\textwidth}
 	\centering
@@ -33,7 +34,7 @@ Next, we report these proportions by father present (Figure~\ref{fig:proportion-
 Note: These plots show the proportion of outcomes, by outcome category, for which the males' mean is larger than the females' mean. The standard errors and the $p$-values are computed using 100 bootstraps. The $p$-values are one-sided and test the null hypothesis that the proportion of outcomes is greater than $\frac{1}{2}$ The crime outcomes are all coded so that a higher value indicates more criminal activity. All other outcome categories have higher values corresponding to socially desirable outcomes.
 \end{figure}
 
-Another measure of home environment maternal locus of control, which is measured when the subjects were 1.5 years old.\footnote{We define internal locus of control as scoring below the sample mean and an external locus of control as scoring at or above the sample mean. See \citet{Rotter_1966_PMGaA}.} An internal locus of control indicates feeling in control of future outcomes, including those related to child rearing. In contrast, an external locus of control indicates feeling that outside forces determine future outcomes (e.g. luck). Figure~\ref{fig:proportion-mlocus} shows the results from condition on this variable. In the control group, a higher maternal internal locus of control promotes better outcomes for males across all outcome categories except health. Another way to state this is that males are more negatively effected if their mothers have a lower external locus of control than are females. This is consistent with the analyses of \citet{Schore_2017_IMHJ} and \citet{golding2016psychology}. Although locus of control does not necessarily measure depression, this finding corresponds with \citet{Beeghly-etal_2017_IMHJ}, who find that increased maternal depression lead to worse outcomes for young males relative to females.
+Another measure of home environment maternal locus of control, which is measured when the subjects were 1.5 years old.\footnote{We define internal locus of control as scoring below the sample mean and an external locus of control as scoring at or above the sample mean. See \citet{Rotter_1966_PMGaA}.} An internal locus of control indicates feeling in control of future outcomes, including those related to child rearing. In contrast, an external locus of control indicates feeling that outside forces determine future outcomes (e.g. luck). Figure~\ref{fig:proportion-mlocus} shows the results from conditioning on this variable. In the control group, a higher maternal internal locus of control promotes better outcomes for males across all outcome categories except health. Another way to state this is that males are more negatively affected if their mothers have a lower external locus of control than are females. This is consistent with the analyses of \citet{Schore_2017_IMHJ} and \citet{golding2016psychology}. Although locus of control does not necessarily measure depression, this finding corresponds with \citet{Beeghly-etal_2017_IMHJ}, who find that increased maternal depression lead to worse outcomes for young males relative to females.
 
 \begin{figure}[!htbp]
 \centering
@@ -54,7 +55,7 @@ Another measure of home environment maternal locus of control, which is measured
 Note: These plots show the proportion of outcomes, by outcome category, for which the males' mean is larger than the females' mean. The standard errors and the $p$-values are computed using 100 bootstraps. The $p$-values are one-sided and test the null hypothesis that the proportion of outcomes is greater than $\frac{1}{2}$ The crime outcomes are all coded so that a higher value indicates more criminal activity. All other outcome categories have higher values corresponding to socially desirable outcomes.
 \end{figure}
 
-Maternal locus of control moderates the treatment outcomes differently. Regardless of locus of control males do not do much better than their female counterparts. The exception is for health outcomes, in which the pattern of boys with mothers with external loci of control outperform those with mothers with internal loci of control. Aggregating across outcomes, we can see that male outcomes are not affected by mothers locus of control if they attend ABC/CARE as it does if they are in the control group.
+Maternal locus of control moderates the treatment outcomes differently. Regardless of locus of control males, do not do much better than their female counterparts. The exception is for health outcomes, in which the pattern of boys with mothers with external loci of control outperform those with mothers with internal loci of control. Treatment compensates for this form of disadvantage. Aggregating across outcomes, male outcomes are not much affected by the mother's locus of control if they attend ABC/CARE, while if they are in the control group, it does. This suggests an important compensating role of enriched early childhood programs.
 
 
 
