--- a/output/abccare-gdiff-treatmenteffects-1.tex
+++ b/output/abccare-gdiff-treatmenteffects-1.tex
@@ -4,6 +4,14 @@
 \cmidrule(lr){4-7} \cmidrule(lr){8-11}
 &   & & Male & Female & Difference & $ p $ -value & Male & Female & Difference & $ p $ -value \\
 \midrule
+Cognitive & IQ & 5 & 94.214 & 95.735 & -1.521 & $ < $ 0.001 & 7.697 & 4.921 & 2.775 & $ < $ 0.001 \\
+ &  & 8 & 93.871 & 93.161 & 0.710 & 0.022 & 4.160 & 5.906 & -1.746 & $ < $ 0.001 \\
+ & Achievement & 8 & 93.384 & 91.931 & 1.453 & 0.002 & 2.309 & 6.619 & -4.311 & $ < $ 0.001 \\
+ &  & 12 & 90.107 & 87.037 & 3.070 & $ < $ 0.001 & 2.404 & 9.631 & -7.227 & $ < $ 0.001 \\
+Social-emotional & Task orientation & 1 & 21.143 & 20.694 & 0.448 & $ < $ 0.001 & 0.896 & 0.940 & -0.044 & 0.696 \\
+ &  & 1.5 & 20.676 & 21.083 & -0.407 & $ < $ 0.001 & 1.861 & 2.939 & -1.078 & $ < $ 0.001 \\
+ & Sociability & 1 & 10.361 & 11.250 & -0.889 & $ < $ 0.001 & 0.246 & 0.527 & -0.282 & $ < $ 0.001 \\
+ &  & 1.5 & 11.147 & 11.057 & 0.090 & 0.004 & -0.710 & 1.074 & -1.784 & $ < $ 0.001 \\
 Parental Income & Parental Labor Income & 3.5 & 13504.955 & 11464.967 & 2,039.988 & $ < $ 0.001 & 1,035.575 & 2,755.646 & -1720.072 & $ < $ 0.001 \\
  &  & 12 & 23868.104 & 20917.408 & 2,950.695 & 0.001 & 7,085.101 & 13632.505 & -6547.404 & $ < $ 0.001 \\
  &  & 15 & 22985.377 & 13772.383 & 9,212.994 & $ < $ 0.001 & 8,487.858 & 8,564.723 & -76.864 & 0.404 \\
